resolved whitespace issues and resolved div tag issues, removed inline styling from users/index.html.erb

--- a/app/assets/stylesheets/zeal-initiative-tracker.webflow.css
+++ b/app/assets/stylesheets/zeal-initiative-tracker.webflow.css
@@ -569,3 +569,7 @@ h5 {
     margin-right: 0px;
   }
 }
+
+.add-user-btn {
+  float: right;
+}
